# SpectralMatchPy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: todo_to_issue.yml
docs/: conf.py  index.rst  modules.rst  src.rst
src/: accel.txt  disp.txt  mainUI.py  reqpy.py  single_component.py  sm_wavelet.py  utilities.py  vel.txt
ui/: about.ui  main.ui
