[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'SpectralMatchPy'
version = '0.0.1'
authors=[{name='Konstantinos Mixios', email='k.mixios@gmail.com' },]
description=''
readme=''
requires-python=''
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',]

[project.urls]
'Homepage'='http://mixiosk.com'
'Bug Tracker'='https://github.com/iammix/SpectralMatchPy/issues'